# News-RAG

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile.embedding  Dockerfile.mcp  Dockerfile.ner  Dockerfile.rag-api  README.md  embedding-requirements.txt  ner-requirements.txt  rag-api-requirements.txt
docs/: README.md  whichrate_ktp_rag_news_presentation.pptx
src/: README.md
src/news_ingest/: README.md  __init__.py  config.py  currents_client.py  currents_ingest.py  dates.py  db.py  gnews_client.py  gnews_ingest.py  hundred_ingest.py  ingest.py  logging_config.py  newsapi_client.py  newsdata_client.py  newsdata_ingest.py  nytimes_client.py  nytimes_ingest.py  thenewsapi_client.py  thenewsapi_ingest.py
src/news_ingest/ml/: README.md  __init__.py  chunk_client.py  claude_vertex.py  document.py  embedding_service.py  embedding_worker.py  evaluation.py  http_client.py  mcp_server.py  ner.py  ner_service.py  ner_worker.py  rag_api.py  rag_cache.py  rag_cli.py  rag_retrieval.py  rag_security.py  schema.py  text.py  web_search.py
tests/: README.md  test_claude_vertex.py  test_currents.py  test_dates.py  test_db.py  test_embedding_worker.py  test_evaluation.py  test_gnews.py  test_ingest.py  test_mcp_server.py  test_ml_schema.py  test_ml_text.py  test_ner_processing.py  test_newsdata.py  test_nytimes.py  test_rag_api.py  test_rag_retrieval.py  test_rag_security.py  test_thenewsapi.py  test_web_search.py
ui/: README.md  package-lock.json  package.json  vite.config.js
ui/src/: App.jsx  README.md  index.css
